--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -22,6 +22,79 @@
   <link rel="preload" href="{{ 'turbo.woff' | asset_url }}" as="font" type="font/woff" crossorigin="anonymous">
   <link rel="preload" href="{{ 'UniversLTStd-Cn.otf' | asset_url }}" as="font" type="font/otf" crossorigin="anonymous">
 
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-525LHL5');</script>
+  <!-- End Google Tag Manager -->
+
+  <script src='//cdn.freshmarketer.com/233649/808396.js' async></script>
+
+  <!-- Pinterest Pixel Base Code -->
+  <script type="text/javascript">
+    !function(e){if(!window.pintrk){window.pintrk=function(){window.pintrk.queue.push(
+      Array.prototype.slice.call(arguments))};var
+      n=window.pintrk;n.queue=[],n.version="3.0";var
+      t=document.createElement("script");t.async=!0,t.src=e;var
+      r=document.getElementsByTagName("script")[0];r.parentNode.insertBefore(t,r)}}("https://s.pinimg.com/ct/core.js");
+    pintrk('load', '2614687646635');
+    pintrk('page');
+  </script>
+  <noscript>
+    <img height="1" width="1" style="display:none;" alt="" src="https://ct.pinterest.com/v3/?tid=2614687646635&noscript=1" />
+  </noscript>
+  <!-- End Pinterest Pixel Base Code -->
+
+  <!-- Taboola Pixel Code -->
+  <script type='text/javascript'>
+    window._tfa = window._tfa || [];
+    window._tfa.push({notify: 'event', name: 'page_view', id: 1184199});
+    !function (t, f, a, x) {
+           if (!document.getElementById(x)) {
+              t.async = 1;t.src = a;t.id=x;f.parentNode.insertBefore(t, f);
+           }
+    }(document.createElement('script'),
+    document.getElementsByTagName('script')[0],
+    '//cdn.taboola.com/libtrc/unip/1184199/tfa.js',
+    'tb_tfa_script');
+  </script>
+  <noscript>
+    <img src='//trc.taboola.com/1184199/log/3/unip?en=page_view'
+        width='0' height='0' style='display:none'/>
+  </noscript>
+  <!-- End of Taboola Pixel Code -->
+
+  <!-- start BKPlatform -->
+  <script type="text/javascript">
+  {% if customer %}
+  var BKCustomer = {
+      id: {{ customer.id }}
+  };
+  {% endif %}
+
+  if(typeof Shopify === 'undefined') {
+      Shopify = {};
+  }
+
+  if (!Shopify.shop) {
+    Shopify.shop = 'xpandlaces.myshopify.com';
+  }
+  var bkRawUrl = function(){return window.location.href}();
+  (function (doc, scriptPath) {
+      var sc, node, today=new Date(),dd=today.getDate(),mm=today.getMonth()+1,yyyy=today.getFullYear();if(dd<10)dd='0'+dd;if(mm<10)mm='0'+mm;today=yyyy+mm+dd;
+      // Load base script tag
+      sc = doc.createElement("script");
+      sc.type = "text/javascript";
+      sc.async = !0;
+      sc.src = scriptPath + '?' + today;
+      node = doc.getElementsByTagName("script")[0];
+      node.parentNode.insertBefore(sc, node);
+  })(document, 'https://sdk.beeketing.com/js/beeketing.js');
+  </script>
+  <!-- end BKPlatform -->
+
   <!-- Optimization: Inline above the fold CSS -->
   <style>@font-face{font-display:swap;font-family:'neuzeit_grotesk_light';src:url('{{ "neuzeit-grotesk-light-webfont.eot" | asset_url }}');src:url('{{ "neuzeit-grotesk-light-webfont.eot?#iefix" | asset_url }}') format('embedded-opentype'),url('{{ "neuzeit-grotesk-light-webfont.woff2" | asset_url }}') format('woff2'),url('{{ "neuzeit-grotesk-light-webfont.woff" | asset_url }}') format('woff'),url('{{ "neuzeit-grotesk-light-webfont.ttf" | asset_url }}') format('truetype'),url('{{ "neuzeit-grotesk-light-webfont.svg#neuzeit_grotesklight" | asset_url }}') format('svg');font-weight:400;font-style:normal}@font-face{font-display:swap;font-family:'neuzeit_grotesk_regular';src:url('{{ "neuzeit_grotesk_regular-webfont.eot" | asset_url }}');src:url('{{ "neuzeit_grotesk_regular-webfont.eot?#iefix" | asset_url }}') format('embedded-opentype'),url('{{ "neuzeit_grotesk_regular-webfont.woff2" | asset_url }}') format('woff2'),url('{{ "neuzeit_grotesk_regular-webfont.woff" | asset_url }}') format('woff'),url('{{ "neuzeit_grotesk_regular-webfont.ttf" | asset_url }}') format('truetype'),url('{{ "neuzeit_grotesk_regular-webfont.svg#neuzeit_groteskregular" | asset_url }}') format('svg');font-weight:400;font-style:normal}@font-face{font-display:swap;font-family:'neuzeitgroteskblack';src:url('{{ "neuzeitgroteskblack.eot" | asset_url }}');src:url('{{ "neuzeitgroteskblack.eot?#iefix" | asset_url }}') format('embedded-opentype'),url('{{ "neuzeitgroteskblack.woff2" | asset_url }}') format('woff2'),url('{{ "neuzeitgroteskblack.woff" | asset_url }}') format('woff'),url('{{ "neuzeitgroteskblack.ttf" | asset_url }}') format('truetype'),url('{{ "neuzeitgroteskblack.svg#neuzeitgroteskblack" | asset_url }}') format('svg');font-weight:400;font-style:normal}@font-face{font-display:swap;font-family:'sf_display_regular';src:url('{{ "sfcompactdisplay-regular-webfont.woff" | asset_url }}') format('woff'),url('{{ "sfcompactdisplay-regular-webfont.ttf" | asset_url }}') format('truetype');font-weight:400;font-style:normal}@font-face{font-display:swap;font-family:'Univers-Cn';src:url('{{ "UniversLTStd-Cn.eot?#iefix" | asset_url }}') format('embedded-opentype'),url('{{ "UniversLTStd-Cn.otf" | asset_url }}') format('opentype'),url('{{ "UniversLTStd-Cn.woff" | asset_url }}') format('woff'),url('{{ "UniversLTStd-Cn.ttf" | asset_url }}') format('truetype'),url('{{ "UniversLTStd-Cn.svg#UniversLTStd-Cn" | asset_url }}') format('svg');font-weight:400;font-style:normal}@font-face{font-display:swap;font-family:'turbo';src:url('{{ "turbo.eot" | asset_url }}');src:url('{{ "turbo.eot" | asset_url }}') format('embedded-opentype'),url('{{ "turbo.woff" | asset_url }}') format('woff'),url('{{ "turbo.ttf" | asset_url }}') format('truetype'),url('{{ "turbo.svg" | asset_url }}') format('svg');font-weight:400;font-style:normal}</style>
   <style>.swiper-pagination{position:absolute;text-align:center;-webkit-transform:translateZ(0);transform:translateZ(0);z-index:10}.button{-webkit-touch-callout:none}.button,.input{-moz-appearance:none;-webkit-appearance:none;-ms-flex-align:center;align-items:center;border:1px solid transparent;border-radius:4px;box-shadow:none;display:-ms-inline-flexbox;display:inline-flex;font-size:1rem;height:2.25em;-ms-flex-pack:start;justify-content:flex-start;line-height:1.5;padding:calc(.375em - 1px) calc(.625em - 1px);position:relative;vertical-align:top}body,h2,h3,html,li,p,ul{margin:0;padding:0}h2,h3{font-size:100%;font-weight:400}ul{list-style:none}button,input{margin:0}html{box-sizing:border-box}*,:after,:before{box-sizing:inherit}img,video{height:auto;max-width:100%}html{background-color:#fff;font-size:16px;-moz-osx-font-smoothing:grayscale;-webkit-font-smoothing:antialiased;min-width:300px;overflow-x:hidden;overflow-y:scroll;text-rendering:optimizeLegibility;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;text-size-adjust:100%}section{display:block}body,button,input{font-family:BlinkMacSystemFont,-apple-system,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Helvetica,Arial,sans-serif}body{color:#4a4a4a;font-size:1rem;font-weight:400;line-height:1.5}a{color:#3273dc;text-decoration:none}img{height:auto;max-width:100%}span{font-style:inherit;font-weight:inherit}strong{color:#363636;font-weight:700}.has-text-centered{text-align:center!important}.button{background-color:#fff;border-color:#dbdbdb;border-width:1px;color:#363636;-ms-flex-pack:center;justify-content:center;padding:calc(.375em - 1px) .75em;text-align:center;white-space:nowrap}.container{margin:0 auto;position:relative}@media screen and (min-width:980px){.container{max-width:960px;width:960px}}@media screen and (min-width:1172px){.container{max-width:1152px;width:1152px}}.input{background-color:#fff;border-color:#dbdbdb;color:#363636;box-shadow:inset 0 1px 2px hsla(0,0%,4%,.1);max-width:100%;width:100%}.input::-moz-placeholder{color:rgba(54,54,54,.3)}.input::-webkit-input-placeholder{color:rgba(54,54,54,.3)}.input:-moz-placeholder{color:rgba(54,54,54,.3)}.input:-ms-input-placeholder{color:rgba(54,54,54,.3)}.control{box-sizing:border-box;clear:both;font-size:1rem;position:relative;text-align:left}.control.has-icons-right .icon{color:#dbdbdb;height:2.25em;position:absolute;top:0;width:2.25em;z-index:4}.control.has-icons-right .input{padding-right:2.25em}.control.has-icons-right .icon.is-right{right:0}.icon{-ms-flex-align:center;align-items:center;display:-ms-inline-flexbox;display:inline-flex;-ms-flex-pack:center;justify-content:center;height:1.5rem;width:1.5rem}.icon.is-large{height:3rem;width:3rem}.menu{font-size:1rem}.navbar{background-color:#fff;min-height:3.25rem;position:relative;z-index:30}.navbar.is-fixed-top{left:0;position:fixed;right:0;z-index:30}.navbar.is-fixed-top{top:0}.navbar-brand{-ms-flex-align:stretch;align-items:stretch;display:-ms-flexbox;display:flex;-ms-flex-negative:0;flex-shrink:0;min-height:3.25rem}.navbar-menu{display:none}.navbar-item{color:#4a4a4a;display:block;line-height:1.5;padding:.5rem .75rem;position:relative}.navbar-item{display:block;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0}.navbar-item img{max-height:1.75rem}@media screen and (max-width:768px){.navbar-brand .navbar-item{-ms-flex-align:center;align-items:center;display:-ms-flexbox;display:flex}.navbar-menu{background-color:#fff;box-shadow:0 8px 16px hsla(0,0%,4%,.1);padding:.5rem 0}.navbar.is-fixed-top .navbar-menu{-webkit-overflow-scrolling:touch;max-height:calc(100vh - 3.25rem);overflow:auto}}@media screen and (min-width:769px){.navbar,.navbar-menu,.navbar-start{-ms-flex-align:stretch;align-items:stretch;display:-ms-flexbox;display:flex}.navbar{min-height:3.25rem}.navbar-item{-ms-flex-align:center;align-items:center}.navbar-item{display:-ms-flexbox;display:flex}.navbar-menu{-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:0;flex-shrink:0}.navbar-start{-ms-flex-pack:start;justify-content:flex-start;margin-right:auto}}.column{display:block;-ms-flex-preferred-size:0;flex-basis:0%;-ms-flex-positive:1;flex-grow:1;-ms-flex-negative:1;flex-shrink:1;padding:.75rem}.columns{margin-left:-.75rem;margin-right:-.75rem;margin-top:-.75rem}.columns:last-child{margin-bottom:-.75rem}.columns:not(:last-child){margin-bottom:.75rem}.columns.is-mobile{display:-ms-flexbox;display:flex}@media print,screen and (min-width:769px){.columns:not(.is-desktop){display:-ms-flexbox;display:flex}}.hero{-ms-flex-align:stretch;align-items:stretch;display:-ms-flexbox;display:flex;-ms-flex-direction:column;flex-direction:column;-ms-flex-pack:justify;justify-content:space-between}.section{padding:3rem 1.5rem}body{padding-top:80px}@media screen and (min-width:769px){body{padding-top:90px}}.navbar{overflow-y:visible;background:none}.navbar>.menu{background:#fff;box-shadow:0 3px 6px 0 rgba(0,0,0,.15);margin-bottom:10px}.navbar>.menu .container{-ms-flex-align:stretch;align-items:stretch;display:-ms-flexbox;display:flex;width:100%;min-height:40px;height:40px}@media screen and (min-width:769px){.navbar>.menu .container{min-height:3.25rem;height:60px}}.navbar>.menu .navbar-brand{min-height:40px}.navbar>.menu .navbar-brand img{height:20px;max-height:35px}@media screen and (min-width:769px){.navbar>.menu .navbar-brand img{height:auto}}.navbar>.menu .navbar-brand,.navbar>.menu .navbar-menu{font-family:neuzeitgroteskblack;font-size:17px}.navbar>.menu .navbar-menu{margin-left:60px}.navbar>.menu .navbar-icons{-ms-flex-positive:1;flex-grow:1;display:-ms-flexbox;display:flex;-ms-flex-negative:0;flex-shrink:0;-ms-flex-pack:end;justify-content:flex-end}.navbar>.menu .navbar-icons .navbar-item.search img{padding:3px}@media screen and (min-width:769px){.navbar>.menu .navbar-icons .navbar-item.search{display:none}}.navbar>.menu .navbar-icons .navbar-item{font-family:neuzeit_grotesk_regular;color:#fff;padding-top:5px;padding-bottom:5px}@media screen and (min-width:769px){.navbar>.menu .navbar-icons .navbar-item{padding-top:12px;padding-bottom:8px}}.navbar>.menu .navbar-icons .navbar-item .cart-count{position:absolute;bottom:3px;right:17px}@media screen and (min-width:769px){.navbar>.menu .navbar-icons .navbar-item .cart-count{bottom:10px}}.navbar>.menu .navbar-item{max-height:40px;padding-top:12px;color:#606060;border-bottom:1px solid transparent}@media screen and (min-width:769px){.navbar>.menu .navbar-item{max-height:none}}.navbar>.menu .navbar-item .icon-down-arrow{font-size:12px;line-height:13px;margin-left:6px}.navbar>.menu .navbar-item.mobile{display:-ms-flexbox;display:flex;width:100px;margin-left:60px;border-bottom:none;background-color:#0090fc;font-size:14px;letter-spacing:1px;color:#fff}@media screen and (min-width:769px){.navbar>.menu .navbar-item.mobile{display:none}}.navbar>.menu .navbar-item.logo{padding-top:8px}[v-cloak]{display:none}input{font-family:HelveticaNeue-Light,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,sans-serif}.rows{-ms-flex-wrap:wrap;flex-wrap:wrap}.rows .row{width:100%}.section.text-banner h2{font-family:neuzeitgroteskblack;letter-spacing:.1px;font-size:28px;font-weight:700;color:#333;text-align:center;line-height:1.1;margin-top:0;margin-bottom:10px}@media screen and (min-width:769px){.section.text-banner h2{font-size:32px;margin-bottom:20px}}.section.text-banner p{font-family:neuzeit_grotesk_light;font-size:16px;text-align:center;margin-bottom:20px}@media screen and (min-width:769px){.section.text-banner p{font-size:18px;margin-bottom:30px}}.section.text-banner p:last-child{margin-bottom:0}.section.text-banner a{color:#fff;background-color:#008ffd;border:1px solid #008ffd;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;font-weight:700;letter-spacing:1.2px;width:240px}.section.featured-box{background-color:#f1f2f2}.section.featured-box .item{background-size:100%;width:100%;height:420px;background-position:50%;background-repeat:no-repeat;padding:20px;padding-top:50px;position:relative;margin:0 auto;max-width:420px}@media screen and (min-width:769px){.section.featured-box .item{max-width:none;padding-top:70px;height:570px}}.section.featured-box h3{font-weight:700;font-size:28px;font-family:neuzeitgroteskblack;letter-spacing:.1px;line-height:30px;color:#333;text-align:center;font-style:normal}.section.featured-box .foot{width:100%;position:absolute;bottom:40px;text-align:center}@media screen and (min-width:769px){.section.featured-box .foot{bottom:64px}}.section.featured-box .foot a{font-family:Helvetica Neue,Helvetica,Arial,sans-serif;background:#0090fc;border:none;color:#fff;width:186px;font-weight:700;letter-spacing:1.2px}.stamped-review-wrapper #stamped-reviews-widget{margin-bottom:60px}@media screen and (min-width:769px){.section.three-item-banner .swiper-pagination{display:none}}@media screen and (min-width:769px){.section.icon-swiper .swiper-pagination{display:none}}[class^="icon-"]:before{font-family:"turbo";font-style:normal;font-weight:400;speak:none;display:inline-block;text-decoration:inherit;width:1em;margin-right:.2em;text-align:center;font-variant:normal;text-transform:none;line-height:1em;margin-left:.15em;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-down-arrow:before{content:"\e904"}.icon-search:before{content:"\e913"}</style>
@@ -83,6 +156,10 @@
 </head>
 
 <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-525LHL5"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
 
   {% section 'header' %}
 
